--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="page/index.css">
 </head>
 <body>
   <div class="page">
@@ -13,141 +12,227 @@
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &#8594;</a></p>
-      <div class="header__square-pic"></div>
+        <a href="#" class="header__subtitle_active-link link-opacity">Узнать &#8594;</a></p>
+      <div class="header__square-pic rotation"></div>
       <img src="./images/header-image.png" alt="Фрагмент картины Опять двойка" class="header__main-illustration">
     </header>
     <main class="content">
-      <section class="description">
+      <section class="description content__description">
         <div class="two-columns">
-          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
               Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но
               часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph"><span class="two-columns__span-accant">Вывод: </span>учиться тоже нужно уметь,
+            <p class="two-columns__span-accant"><span class="span-accant">Вывод: </span>учиться тоже нужно уметь,
               но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
-      <section class="digits">
-        <h2 class="section-title">Цифры и факты</h2>
-        <p class="section-subtitle">Про учёбу и мозг</p>
-        <ul class="table">
-          <li class="table__cell">
-            <h3 class="table__heading">86 миллиардов</h3>
-            <p class="table__text">Число нейронов в мозге человека</p>
+      <section class="techniques content__techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <ul class="cards">
+          <li class="cards__item">
+            <img src="./images/cards-attention.png" alt="Фото книги в руках человека" class="cards__image">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
-          <li class="table__cell">
-            <h3 class="table__heading">2.1 миллиарда</h3>
-            <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text">Всемирный Банк, 2017</p>
+          <li class="cards__item">
+            <img src="./images/cards-recall.png" alt="Фото скульптуры" class="cards__image">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
-          <li class="table__cell">
-            <h3 class="table__heading">1000 терабайт</h3>
-            <p class="table__text">Объём памяти человека</p>
+          <li class="cards__item">
+            <img src="./images/cards-interliving.png" alt="Фото множества людей внутри большого здания" class="cards__image">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
-          <li class="table__cell">
-            <h3 class="table__heading">500 триллионов</h3>
-            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <li class="cards__item">
+            <img src="./images/cards-question.png" alt="Фото человека в четырех стенах" class="cards__image">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
-          <li class="table__cell">
-            <h3 class="table__heading">420 миллионов</h3>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text">Всемирный Банк, 2017</p>
-          </li>
-          <li class="table__cell">
-            <h3 class="table__heading">17–20 лет</h3>
-            <p class="table__text">Пик обучаемости</p>
-          </li>
-          <li class="table__cell">
-            <h3 class="table__heading">1885 год</h3>
-            <p class="table__text">Открытие кривой забывания</p>
-          </li>
-          <li class="table__cell">
-            <h3 class="table__heading">1889 год</h3>
-            <p class="table__text">Открытие условного рефлекса</p>
+          <li class="cards__item">
+            <img src="./images/cards-competence.png" alt="Фото стопки книг, лежащей на ладони" class="cards__image">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
         </ul>
+      </section>
+      <section class="video content__video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+        <div class="video__iframes">
+          <iframe id="ytplayer1" class="video__iframe"
+          src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe id="ytplayer2" class="video__iframe"
+          src="https://www.youtube.com/embed/0u3bccaRmmg" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley content__oakley">
+        <div class="two-columns">
+          <h3 class="two-columns__brief">История Барбары Оакли.</h3>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием,
+              причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её
+              выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой
+              подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже,
+              чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </div>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <a href="#" class="feynman__link link-opacity">Подробнее &#8594;</a>
         <img src="./images/feynman.png" alt="Портрет Феймана" class="feynman__illustration">
       </section>
-      <section class="kaufman">
-        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-        <ul class="table table_theme_dark">
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">1</h3>
-            <p class="table__text">Выберите привлекательный проект.</p>
+      <section class="digits content__digits">
+        <h2 class="section-title section-title__theme_white">Цифры и факты</h2>
+        <h3 class="section-subtitle section-subtitle__theme_white">Про учёбу и мозг</h3>
+        <ul class="table table__theme_white">
+          <li class="table__cell table__cell_theme_white">
+            <h3 class="table__heading_theme_white">86 миллиардов</h3>
+            <p class="table__text_theme_white">Число нейронов в мозге человека</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">2</h3>
-            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">2.1 миллиарда</h3>
+            <p class="table__text_theme_white">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text_theme_white">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">3</h3>
-            <p class="table__text">Определите целевой уровень мастерства.</p>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">1000 терабайт</h3>
+            <p class="table__text_theme_white">Объём памяти человека</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">4</h3>
-            <p class="table__text">Разбейте навык на элементы.</p>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">500 триллионов</h3>
+            <p class="table__text_theme_white">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">5</h3>
-            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">420 миллионов</h3>
+            <p class="table__text_theme_white">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text_theme_white">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">6</h3>
-            <p class="table__text">Устраните препятствия для занятий.</p>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">17–20 лет</h3>
+            <p class="table__text_theme_white">Пик обучаемости</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">7</h3>
-            <p class="table__text">Выделите специальное время для занятий.</p>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">1885 год</h3>
+            <p class="table__text_theme_white">Открытие кривой забывания</p>
           </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">8</h3>
-            <p class="table__text">Создайте быстрые петли обратной связи.</p>
-          </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">9</h3>
-            <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </li>
-          <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">10</h3>
-            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+          <li class="table__cell_theme_white">
+            <h3 class="table__heading_theme_white">1889 год</h3>
+            <p class="table__text_theme_white">Открытие условного рефлекса</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
       </section>
+      <section class="khan">
+        <div class="khan__container">
+          <h3 class="khan__author">Салман Хан</h3>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+            Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить
+            навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="./images/khan-book.jpg" alt="Обложка книги Саламана Хана" class="khan__book-pic">
+            <a href="#" class="khan__buy-link link-opacity">Купить книгу &#8594;</a>
+          </div>
+        </div>
+      </section>
+      <section class="kaufman">
+        <h2 class="section-title section-title__theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle__theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table table__theme_dark">
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">1</h3>
+            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">2</h3>
+            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">3</h3>
+            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">4</h3>
+            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">5</h3>
+            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">6</h3>
+            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">7</h3>
+            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">8</h3>
+            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">9</h3>
+            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">10</h3>
+            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
+        <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle rotation">
+      </section>
+      <nav class="resources content__resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class="resources__logo-zone">
+          <a href="#" class="resources__link link-opacity">
+            <img src="./images/resources-arzamas.svg" alt="Логотип Arzamas" class="resources__logo">
+          </a>
+          <a href="#" class="resources__link link-opacity">
+            <img src="./images/resources-n1.svg" alt="Логотип N+1" class="resources__logo">
+          </a>
+          <a href="#" class="resources__link link-opacity">
+            <img src="./images/resources-strelka.svg" alt="Логотип Strelka" class="resources__logo">
+          </a>
+          <a href="#" class="resources__link link-opacity">
+            <img src="./images/resources-polka.svg" alt="Логотип Полка" class="resources__logo">
+          </a>
+        </div>
+      </nav>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer__column_content_copyright">
+        <div class="footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <p class="footer__author">&copy; Виктор Абанькин</p>
+          <div class="footer__author">&copy; Виктор Абанькин</div>
         </div>
-        <nav class="footer__column footer__column_content_info">
+        <div class="footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-          <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link">Главная</a></li>
-            <li><a href="#" class="footer__column-link">Концепция</a></li>
-            <li><a href="#" class="footer__column-link">Наставники</a></li>
-          </ul>
-        </nav>
-        <nav class="footer__column footer__column_content_social">
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link link-opacity">Главная</a>
+            <a href="#" class="footer__column-link link-opacity">Концепция</a>
+            <a href="#" class="footer__column-link link-opacity">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link"><img src="./images/youtube-icon.svg" alt="иконка YouTube" class="footer__social-icon">YouTube</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="иконка ВКонтакте" class="footer__social-icon">ВКонтакте</a></li>
-            <li><a href="#" class="footer__column-link"><img src="./images/tiktok-icon.svg" alt="иконка TikTok" class="footer__social-icon">TikTok</a></li>
-          </ul>
-        </nav>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link link-opacity"><img src="./images/youtube-icon.svg" alt="Логотип YouTube" class="footer__social-icon">YouTube</a>
+            <a href="#" class="footer__column-link link-opacity"><img src="./images/vk_color_white.svg" alt="Логотип ВКонтакте" class="footer__social-icon">ВКонтакте</a>
+            <a href="#" class="footer__column-link link-opacity"><img src="./images/tiktok-icon.svg" alt="Логотип TikTok" class="footer__social-icon">TikTok</a>
+          </div>
+        </div>
       </div>
     </footer>
   </div>
