--- a/index.html
+++ b/index.html
@@ -95,38 +95,38 @@
         <h3 class="section-subtitle section-subtitle_theme_white">Про учёбу и мозг</h3>
         <ul class="table table_theme_white">
           <li class="table__cell table__cell_theme_white">
-            <h3 class="table__heading_theme_white">86 миллиардов</h3>
-            <p class="table__text_theme_white">Число нейронов в мозге человека</p>
+            <h3 class="table__heading table__heading_theme_white">86 миллиардов</h3>
+            <p class="table__text table__text_theme_white">Число нейронов в мозге человека</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">2.1 миллиарда</h3>
-            <p class="table__text_theme_white">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text_theme_white">Всемирный Банк, 2017</p>
+          <li class="table__cell table__cell_theme_white">
+            <h3 class="table__heading table__heading_theme_white">2.1 миллиарда</h3>
+            <p class="table__text table__text_theme_white">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__text_theme_white">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">1000 терабайт</h3>
-            <p class="table__text_theme_white">Объём памяти человека</p>
+          <li class="table__cell table__cell_theme_white">
+            <h3 class="table__heading table__heading_theme_white">1000 терабайт</h3>
+            <p class="table__text table__text_theme_white">Объём памяти человека</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">500 триллионов</h3>
-            <p class="table__text_theme_white">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <li class="table__cell table__cell_theme_white">
+            <h3 class="table__heading table__heading_theme_white">500 триллионов</h3>
+            <p class="table__text table__text_theme_white">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">420 миллионов</h3>
-            <p class="table__text_theme_white">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text_theme_white">Всемирный Банк, 2017</p>
+          <li class="table__cell table__cell_theme_white">
+            <h3 class="table__heading table__heading_theme_white">420 миллионов</h3>
+            <p class="table__text table__text_theme_white">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text_theme_white">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">17–20 лет</h3>
-            <p class="table__text_theme_white">Пик обучаемости</p>
+          <li class="table__cell table__cell_theme_white">
+            <h3 class="table__heading table__heading_theme_white">17–20 лет</h3>
+            <p class="table__text table__text_theme_white">Пик обучаемости</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">1885 год</h3>
-            <p class="table__text_theme_white">Открытие кривой забывания</p>
+          <li class="table__cell table__cell_theme_white">
+            <h3 class="table__heading table__heading table__heading_theme_white">1885 год</h3>
+            <p class="table__text table__text_theme_white">Открытие кривой забывания</p>
           </li>
-          <li class="table__cell_theme_white">
-            <h3 class="table__heading_theme_white">1889 год</h3>
-            <p class="table__text_theme_white">Открытие условного рефлекса</p>
+          <li class="table__cell table__cell_theme_white">
+            <h3 class="table__heading table__heading_theme_white">1889 год</h3>
+            <p class="table__text table__text_theme_white">Открытие условного рефлекса</p>
           </li>
         </ul>
       </section>
@@ -149,45 +149,45 @@
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
         <ul class="table table_theme_dark">
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">1</h3>
-            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">2</h3>
-            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">3</h3>
-            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">4</h3>
-            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">5</h3>
-            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">6</h3>
-            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">7</h3>
-            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">8</h3>
-            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">9</h3>
-            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">10</h3>
-            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
         <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle rotation">
@@ -213,11 +213,11 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <div class="footer__author">&copy; Виктор Абанькин</div>
         </div>
-        <div class="footer__column_content_info">
+        <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <div class="footer__column-links">
             <a href="#" class="footer__column-link link-opacity">Главная</a>
@@ -225,7 +225,7 @@
             <a href="#" class="footer__column-link link-opacity">Наставники</a>
           </div>
         </div>
-        <div class="footer__column_content_social">
+        <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <div class="footer__column-links">
             <a href="#" class="footer__column-link link-opacity"><img src="./images/youtube-icon.svg" alt="Логотип YouTube" class="footer__social-icon">YouTube</a>
